staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 08:24:02.</p>
+<p>Last compiled Sunday, March 16, 2014 - 08:32:00.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -285,7 +285,6 @@ credential.helper=osxkeychain
 filter.media.clean=git-media-clean %f
 filter.media.smudge=git-media-smudge %f
 color.ui=true
-core.editor=RStudio
 core.repositoryformatversion=0
 core.filemode=true
 core.bare=false
@@ -433,7 +432,8 @@ Changes not staged for commit:
   (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 
-    modified:   GitOne.Rmd
+    modified:   GitOne.html
+    modified:   GitOne.md
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -448,8 +448,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master c6c2236] staging all files
- 1 file changed, 3 insertions(+)
+<pre><code>[master c8a7422] staging all files
+ 2 files changed, 57 insertions(+), 59 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -485,7 +485,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit c6c2236c2e95400c84f116a2a7150b296347769e
+<pre><code>commit c8a7422b90871dca98e9c3529d292f14e6a73926
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 08:32:00 2014 -0400
+
+    staging all files
+
+commit c6c2236c2e95400c84f116a2a7150b296347769e
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 08:24:02 2014 -0400
 
@@ -496,12 +502,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 07:43:27 2014 -0400
 
     time changes
-
-commit 423031f3a985b3dd4119f0544f8ffdd93b644f5d
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Sun Mar 16 07:42:59 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -509,9 +509,9 @@ Date:   Sun Mar 16 07:42:59 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>c6c2236c2e95400c84f116a2a7150b296347769e staging all files
+<pre><code>c8a7422b90871dca98e9c3529d292f14e6a73926 staging all files
+c6c2236c2e95400c84f116a2a7150b296347769e staging all files
 4d033f91e034347edbe519dfc9628e00ae456513 time changes
-423031f3a985b3dd4119f0544f8ffdd93b644f5d staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -519,9 +519,9 @@ Date:   Sun Mar 16 07:42:59 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
+c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
 4d033f9 Sun Mar 16 07:43:27 2014 -0400- time changes [Alan Arnholt]
-423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -529,7 +529,12 @@ Date:   Sun Mar 16 07:42:59 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.html | 61 ++++++++++++++++++++++++++++-----------------------------
+ Git/GitOne.md   | 55 +++++++++++++++++++++++++--------------------------
+ 2 files changed, 57 insertions(+), 59 deletions(-)
+
+c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd | 3 +++
  1 file changed, 3 insertions(+)
 
@@ -537,11 +542,6 @@ Date:   Sun Mar 16 07:42:59 2014 -0400
  Git/GitOne.html | 40 +++++++++++++++++++---------------------
  Git/GitOne.md   | 34 ++++++++++++++++------------------
  2 files changed, 35 insertions(+), 39 deletions(-)
-
-423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.html | 58 +++++++++++++++++++++++++++++++++-------------------
- Git/GitOne.md   | 63 ++++++++++++++++++++++++++++++++++++++++-----------------
- 2 files changed, 82 insertions(+), 39 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
