staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 08:32:00.</p>
+<p>Last compiled Sunday, March 16, 2014 - 12:05:23.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -448,8 +448,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master c8a7422] staging all files
- 2 files changed, 57 insertions(+), 59 deletions(-)
+<pre><code>[master a68c42b] staging all files
+ 2 files changed, 40 insertions(+), 40 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -475,7 +475,8 @@ nothing to commit, working directory clean
 </code></pre>
 
 <pre><code>On branch master
-Your branch is up-to-date with &#39;origin/master&#39;.
+Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+  (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
 </code></pre>
@@ -485,7 +486,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit c8a7422b90871dca98e9c3529d292f14e6a73926
+<pre><code>commit a68c42b8181830df14f4988f2bb5f4b47e595414
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 12:05:24 2014 -0400
+
+    staging all files
+
+commit c8a7422b90871dca98e9c3529d292f14e6a73926
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 08:32:00 2014 -0400
 
@@ -496,12 +503,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 08:24:02 2014 -0400
 
     staging all files
-
-commit 4d033f91e034347edbe519dfc9628e00ae456513
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Sun Mar 16 07:43:27 2014 -0400
-
-    time changes
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -509,9 +510,9 @@ Date:   Sun Mar 16 07:43:27 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>c8a7422b90871dca98e9c3529d292f14e6a73926 staging all files
+<pre><code>a68c42b8181830df14f4988f2bb5f4b47e595414 staging all files
+c8a7422b90871dca98e9c3529d292f14e6a73926 staging all files
 c6c2236c2e95400c84f116a2a7150b296347769e staging all files
-4d033f91e034347edbe519dfc9628e00ae456513 time changes
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -519,9 +520,9 @@ c6c2236c2e95400c84f116a2a7150b296347769e staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>a68c42b Sun Mar 16 12:05:24 2014 -0400- staging all files [Alan Arnholt]
+c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
 c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
-4d033f9 Sun Mar 16 07:43:27 2014 -0400- time changes [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -529,7 +530,12 @@ c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>a68c42b Sun Mar 16 12:05:24 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.html | 44 ++++++++++++++++++++++----------------------
+ Git/GitOne.md   | 36 ++++++++++++++++++------------------
+ 2 files changed, 40 insertions(+), 40 deletions(-)
+
+c8a7422 Sun Mar 16 08:32:00 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 61 ++++++++++++++++++++++++++++-----------------------------
  Git/GitOne.md   | 55 +++++++++++++++++++++++++--------------------------
  2 files changed, 57 insertions(+), 59 deletions(-)
@@ -537,11 +543,6 @@ c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
 c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd | 3 +++
  1 file changed, 3 insertions(+)
-
-4d033f9 Sun Mar 16 07:43:27 2014 -0400- time changes [Alan Arnholt]
- Git/GitOne.html | 40 +++++++++++++++++++---------------------
- Git/GitOne.md   | 34 ++++++++++++++++------------------
- 2 files changed, 35 insertions(+), 39 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
